--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -1,13 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Article{% endblock %}
+{% block title %}Modifier Article
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Article</h1>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-    {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
+	<div class="example-wrapper">
 
-    <a href="{{ path('app_article_index') }}">back to list</a>
+		<h1>Modifier l'Article</h1>
 
-    {{ include('article/_delete_form.html.twig') }}
+
+		{{ include('article/_form.html.twig', {'button_label': 'Modifier'}) }}
+
+		<a href="{{ path('app_article_index') }}">Retour à la liste des articles</a>
+
+
+		{{ include('article/_delete_form.html.twig') }}
+	</div>
 {% endblock %}
