--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -1,34 +1,53 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article{% endblock %}
+{% block title %}Article
+{% endblock %}
 
 {% block body %}
-    <h1>Article</h1>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ article.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ article.nom }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ article.description }}</td>
-            </tr>
-            <tr>
-                <th>Contenu</th>
-                <td>{{ article.contenu }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<div class="example-wrapper">
 
-    <a href="{{ path('app_article_index') }}">back to list</a>
+		<h1>Article</h1>
 
-    <a href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
+		<table class="table">
+			<tbody>
+				<tr>
+					<th>Id</th>
+					<td>{{ article.id }}</td>
+				</tr>
+				<tr>
+					<th>Nom</th>
+					<td>{{ article.nom }}</td>
+				</tr>
+				<tr>
+					<th>Description</th>
+					<td>{{ article.description }}</td>
+				</tr>
+				<tr>
+					<th>Contenu</th>
+					<td>{{ article.contenu }}</td>
+				</tr>
+			</tbody>
+		</table>
 
-    {{ include('article/_delete_form.html.twig') }}
+		<a href="{{ path('app_article_index') }}">Retour à la liste des articles</a>
+
+
+		<a href="{{ path('app_article_edit', {'id': article.id}) }}">Modifier</a>
+
+		{{ include('article/_delete_form.html.twig') }}
+
+	</div>
 {% endblock %}
