--- a/templates/profile_categorie/edit.html.twig
+++ b/templates/profile_categorie/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Categorie
+{% block title %}Edit Categorie
 {% endblock %}
 
 {% block body %}
@@ -19,12 +19,14 @@
 
 	<div class="example-wrapper">
 
-		<h1>Créer une nouvelle catégorie</h1>
-
-		{{ include('categorie/_form.html.twig') }}
-
-		<a href="{{ path('app_categorie_index') }}">Retour à la liste des articles</a>
+		<h1>Modifier les Categories</h1>
 
 
+		{{ include('profile_categorie/_form.html.twig', {'button_label': 'Modifier'}) }}
+
+		<a href="{{ path('app_profile_categorie_index') }}">Retour à la liste des articles</a>
+
+
+		{{ include('profile_categorie/_delete_form.html.twig') }}
 	</div>
 {% endblock %}
