--- a/templates/profile_categorie/index.html.twig
+++ b/templates/profile_categorie/index.html.twig
@@ -4,8 +4,8 @@
 {% endblock %}
 
 {% block body %}
-
 	<h1>Toutes les categories</h1>
+
 
 	<table class="table">
 		<thead>
@@ -21,17 +21,19 @@
 					<td>{{ categorie.id }}</td>
 					<td>{{ categorie.articleAlphab }}</td>
 					<td>
-						<a href="{{ path('app_categorie_show', {'id': categorie.id}) }}">Afficher</a>
-						<a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
+						<a href="{{ path('app_profile_categorie_show', {'id': categorie.id}) }}">Afficher</a>
+						<a href="{{ path('app_profile_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
 					</td>
 				</tr>
 			{% else %}
 				<tr>
 					<td colspan="3">Pas de résultat</td>
+
 				</tr>
 			{% endfor %}
 		</tbody>
 	</table>
 
-	<a href="{{ path('app_categorie_new') }}">Créer une nouvelle catégorie</a>
+	<a href="{{ path('app_profile_categorie_new') }}">Créer une nouvelle catégorie</a>
+
 {% endblock %}
