--- a/templates/profile_categorie/show.html.twig
+++ b/templates/profile_categorie/show.html.twig
@@ -19,10 +19,11 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('app_categorie_index') }}">Retour à la liste des articles</a>
+	<a href="{{ path('app_profile_categorie_index') }}">Retour à la liste des articles</a>
 
 
-	<a href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
+	<a href="{{ path('app_profile_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
 
-	{{ include('categorie/_delete_form.html.twig') }}
+
+	{{ include('profile_categorie/_delete_form.html.twig') }}
 {% endblock %}
